(dataset) Startet work on the dataset and the visualization function

--- a/fly_dataset.ipynb
+++ b/fly_dataset.ipynb
@@ -8,13 +8,13 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
+     "evalue": "No module named 'tqdm'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnn\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mimage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmpimg\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtqdm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfunctools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m partial\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m confusion_matrix, ConfusionMatrixDisplay\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'tqdm'"
      ]
     }
    ],
@@ -23,6 +23,7 @@
     "import numpy as np\n",
     "import torch.nn as nn\n",
     "from torchvision.datasets import MNIST\n",
+    "from torchvision.io import read_image\n",
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import matplotlib.image as mpimg\n",
@@ -35,61 +36,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a23bbc8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6bd4b086",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lass FLYDataset(Dataset):\n",
-    "    def __init__(self, path_to_data, mode = \"training\"):\n",
+    "class FLYDataset(Dataset):\n",
+    "    def __init__(self, path_to_data, mode = \"training\", cam = 0):\n",
+    "\n",
+    "        # save selected camera and init lists\n",
+    "        self.cam = cam\n",
+    "        self.img_paths = []\n",
+    "        self.annotations = []\n",
+    "\n",
     "        # e.g path to the data, different classes, number of images per class, or image IDs per class\n",
     "        if(mode != \"testing\" and mode != \"training\"):\n",
     "            raise ValueError(\"No such kind of data available\")\n",
     "\n",
     "        #Create path from path and parameter training/test\n",
-    "        full_path = os.path.join(path_to_data, mode)\n",
+    "        full_path = os.path.join(path_to_data, mode, f\"cam{cam}\")\n",
     "        # check if path exists. Path to data and kind are user inputs.\n",
     "        if not os.path.isdir(full_path):\n",
-    "            raise FileExistsError(f\"Wrong full path {full_path}\")\n",
+    "            raise FileExistsError(f\"Wrong path {full_path}\")\n",
     "\n",
-    "        # init lists\n",
-    "        self.img_labels = []\n",
-    "        self.img_annots = []\n",
-    "\n",
-    "        # iterare over each label folder, append the label and the corresponding path to the data under the same index.\n",
-    "        for label in sorted(os.listdir(full_path)):\n",
-    "            label_path = os.path.join(full_path, label)\n",
-    "            for image_name in os.listdir(label_path):\n",
-    "                # get the label as an int and the path of the image\n",
-    "                self.img_labels.append(int(label))\n",
-    "                self.img_snnotes.append(os.path.join(label_path, image_name))\n",
-    "\n",
-    "\n",
-    "\n",
+    "        # get the path to the annotation file and the path to the images\n",
+    "        annotation_file_path = os.path.join(full_path, \"annotations\", \"annotations.npz\")\n",
+    "        image_path = os.path.join(full_path, \"images\")\n",
+    "        # check if path exists. \n",
+    "        if not os.path.isfile(annotation_file_path):\n",
+    "            raise FileExistsError(f\"Wrong path to annotation file {annotation_file_path}\")\n",
+    "        if not os.path.isdir(image_path):\n",
+    "            raise FileExistsError(f\"Wrong path {image_path}\")\n",
     "        \n",
+    "        # load annotations\n",
+    "        annotations = np.load(annotation_file_path)\n",
+    "        self.annotations = annotations['points2d']\n",
+    "\n",
+    "        for image_name in sorted(os.listdir(image_path)):\n",
+    "                # get the label as an int and the path of the image\n",
+    "                if(image_name.endswith(\".jpg\")):\n",
+    "                    self.img_paths.append(os.path.join(image_path, image_name))\n",
+    "\n",
+    "        if len(self.img_paths) != len(self.annotations):\n",
+    "            raise IndexError(\"Number of images and annotations must be the same\")\n",
+    "\n",
+    "\n",
     "    def __getitem__(self, idx):\n",
-    "        # insert code here\n",
     "        # returning a single image per given index idx and its corresponding label\n",
     "\n",
-    "        #Check if the index exists and read in the image. Return both the image and the label\n",
-    "        if(idx > len(self.img_labels)):\n",
+    "        #Check if the index exists and read in the image. Return both the image and the label as torch tensors\n",
+    "        if(idx > len(self.img_paths)):\n",
     "            raise LookupError(\"Invalid index for image\")\n",
-    "        img = mpimg.imread(self.img_data[idx])\n",
-    "        label = self.img_labels[idx]\n",
+    "        t_img = read_image(self.img_paths[idx])\n",
+    "        _, H, W = t_img.shape\n",
+    "        annotation = self.annotations[idx]\n",
+    "        t_anno = torch.tensor(annotation * (H, W))\n",
     "\n",
-    "        return img, label\n",
+    "\n",
+    "        return t_img, t_anno\n",
     "    \n",
     "    def __len__(self):\n",
-    "        # insert code here\n",
     "        # returning whole length of the dataset / number of images\n",
-    "        return len(self.img_labels)\n",
+    "        return len(self.img_paths)\n",
     "       "
    ]
   },
@@ -100,11 +107,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CNN_VAE(nn.Module):\n",
+    "class CNN_Fly(nn.Module):\n",
     "    def __init__(self, input_size, embedding_size):\n",
     "        super().__init__()\n",
     "\n",
     "        self.embedding_size = embedding_size\n",
+    "        self.input_size = input_size\n",
     "\n",
     "        \"\"\"Encoder\"\"\"\n",
     "        self.e1 = nn.Conv2d(1, 32, stride=(1, 1), kernel_size=(3, 3), padding=1)\n",
