feat: added transforms and seperate training py for training on ramses

--- a/fly_dataset.ipynb
+++ b/fly_dataset.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a943d4a2",
    "metadata": {},
    "outputs": [
@@ -289,6 +289,14 @@
     }
    ],
    "source": [
+    "trnsforms = v2.Compose([\n",
+    "    v2.RandomHorizontalFlip(p=0.5),                 # Flip image horizontally with 50% chance (also flips keypoints if used)\n",
+    "    v2.RandomRotation(degrees=15),                  # Rotate image randomly between -15 and +15 degrees\n",
+    "    #v2.ColorJitter(brightness=0.2, contrast=0.2),  # Randomly adjust brightness and contrast by up to ±20% #TODO Clarify: does this make sense as a transform for the data?\n",
+    "    v2.ToDtype(torch.float32, scale=True),          # Convert image to float32 and rescale pixel values from [0,255] → [0,1]\n",
+    "    v2.Normalize(mean=(0.5,), std=(0.5,))           # Normalize image: (x - 0.5) / 0.5 → values now in [-1, 1]\n",
+    "])\n",
+    "\n",
     "# Train\n",
     "def train_keypoint_model(model, dataset, num_epochs=10, batch_size=16, lr=1e-4, device=\"cuda\"):\n",
     "    dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
@@ -301,11 +309,18 @@
     "        total_loss = 0.0\n",
     "        loop = tqdm(dataloader, desc=f\"Epoch {epoch+1}/{num_epochs}\")\n",
     "\n",
-    "        for images, keypoints in loop:\n",
-    "            images = images.to(device)           # [B, 1, H, W]\n",
+    "        for img, keypoints in loop:\n",
+    "            for i in range(img.size(0)):\n",
+    "                sample = {\"image\": img[i], \"keypoints\": keypoints[i]}\n",
+    "                sample = trnsforms(sample)  # apply v2 transforms\n",
+    "\n",
+    "                img[i] = sample[\"image\"]\n",
+    "                keypoints[i] = sample[\"keypoints\"]\n",
+    "\n",
+    "            img = img.to(device)           # [B, 1, H, W]\n",
     "            keypoints = keypoints.to(device)     # [B, J, 2]\n",
     "\n",
-    "            preds, _, _, _ = model(images)       # [B, J, 2]\n",
+    "            preds, _, _, _ = model(img)       # [B, J, 2]\n",
     "            keypoints_px = keypoints.clone()\n",
     "            keypoints_px[:, 0] *= dataset.H  # x\n",
     "            keypoints_px[:, 1] *= dataset.W  # y\n",
@@ -383,95 +398,10 @@
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\") # Use CPU for debug so you do not use too much GPU time\n",
     "\n",
-    "#m = train_keypoint_model(model, dataset, num_epochs=1)\n",
-    "model.load_state_dict(torch.load(\"./fly-test.pt\"))\n",
-    "model.to(device)\n",
-    "visualize_predictions(model, test_dataset, device=device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b366a514",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embedding_size = 64\n",
-    "kl_weight = 0.01\n",
-    "learning_rate = 1e-2\n",
-    "epochs = 101\n",
-    "\n",
-    "vae = CNN_VAE(input_size, embedding_size).to(device)\n",
-    "optimizer = optim.SGD(vae.parameters(), lr=learning_rate, momentum=0.9)\n",
-    "\n",
-    "print(f'\\nVAE -- With LR = {learning_rate} AND KL_WEIGHT = {kl_weight}')\n",
-    "\n",
-    "vae.zero_grad()\n",
-    "history_loss = []\n",
-    "history_val_loss = []\n",
-    "\n",
-    "for epoch in range(epochs):\n",
-    "    running_loss = 0.0\n",
-    "    running_recons_loss = 0.0\n",
-    "    running_kld_loss = 0.0\n",
-    "    for i, data in enumerate(train_dataloader, 0):\n",
-    "        inputs, _ = data[0].to(device), data[1].to(device)\n",
-    "        if inputs.dim() == 3:\n",
-    "            inputs = inputs.unsqueeze(1)\n",
-    "        optimizer.zero_grad()\n",
-    "        pred_x, _, pred_mean, pred_logvar = vae(inputs)\n",
-    "        loss = vae.loss_function(pred_x, inputs, pred_mean, pred_logvar, kl_weight=kl_weight)\n",
-    "        loss['loss'].backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        running_loss += loss['loss'].item()\n",
-    "        running_recons_loss += loss['Reconstruction_Loss'].item()\n",
-    "        running_kld_loss += loss['KLD'].item()\n",
-    "    # output loss every 10 epochs\n",
-    "    if epoch % 10 == 0:\n",
-    "        with torch.no_grad():\n",
-    "            running_val_loss = 0.0\n",
-    "            running_val_recons_loss = 0.0\n",
-    "            running_val_kld_loss = 0.0\n",
-    "            for j, data in enumerate(test_dataloader, 0):\n",
-    "                inputs, labels = data[0].to(device), data[1].to(device)\n",
-    "                if inputs.dim() == 3:\n",
-    "                    inputs = inputs.unsqueeze(1)\n",
-    "                pred_x, _, pred_mean, pred_logvar = vae(inputs)\n",
-    "                loss = vae.loss_function(pred_x, inputs, pred_mean, pred_logvar, kl_weight=kl_weight)\n",
-    "\n",
-    "                running_val_loss += loss['loss'].item()\n",
-    "                running_val_recons_loss += loss['Reconstruction_Loss'].item()\n",
-    "                running_val_kld_loss += loss['KLD'].item()\n",
-    "\n",
-    "            print(f'[{epoch + 1}] Loss: {running_loss / (i + 1):.5f} - Recons loss: {running_recons_loss / (i + 1):.5f}  '\n",
-    "                 f'- KLD: {running_kld_loss / (i + 1):.5f} || Val loss: {running_val_loss / (j + 1):.5f} '\n",
-    "                 f'- Recons val loss: {running_val_recons_loss / (j + 1):.5f}  - KLD: {running_val_kld_loss / (j + 1):.5f}')\n",
-    "\n",
-    "        history_loss.append(running_loss / (i + 1))\n",
-    "        history_val_loss.append(running_val_loss / (j + 1))\n",
-    "        running_loss = 0.0\n",
-    "\n",
-    "    # plot every n-th epoch\n",
-    "    if epoch % plot_nepoch == 0:\n",
-    "        rd_i = np.random.randint(inputs.shape[0])\n",
-    "        fig, axes = plt.subplots(1, 2)\n",
-    "        fig.suptitle(f'VAE - epoch {epoch} - loss {running_val_loss / (j + 1):.5f}')\n",
-    "        axes[0].imshow(inputs[rd_i].reshape((28, 28)).detach().cpu().numpy())\n",
-    "        axes[1].imshow(pred_x[rd_i].reshape((28, 28)).detach().cpu().numpy())\n",
-    "        plt.savefig(os.path.join(path_, f'cnnvae_ex_epoch{epoch}_emb-{embedding_size}.png'))\n",
-    "\n",
-    "print('-- End training, saving model')\n",
-    "torch.save(vae.state_dict(), os.path.join(path_, f'mnist_cnnvae_emb-{embedding_size}_klweight-{kl_weight}.pt'))\n",
-    "\n",
-    "# visualization\n",
-    "plt.figure()\n",
-    "plt.suptitle('Losses VAE')\n",
-    "plt.plot(np.arange(1, len(history_loss) * 10 + 1, 10), history_loss, label='loss')\n",
-    "plt.plot(np.arange(1, len(history_loss) * 10 + 1, 10), history_val_loss, '--', label='val_loss')\n",
-    "plt.legend()\n",
-    "plt.savefig(os.path.join(path_, f'losses_emb-{embedding_size}_klweight-{kl_weight}.png'))\n",
-    "plt.show()"
+    "m = train_keypoint_model(model, dataset, num_epochs=1)\n",
+    "#model.load_state_dict(torch.load(\"./fly-test.pt\"))\n",
+    "#model.to(device)\n",
+    "visualize_predictions(m, test_dataset, device=device)\n"
    ]
   }
  ],
