(refactor) created separate files for classes

--- a/all.ipynb
+++ b/all.ipynb
@@ -8,183 +8,13 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import numpy as np\n",
-    "import torch.nn as nn\n",
-    "from torchvision.io import read_image\n",
-    "import matplotlib.pyplot as plt\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import matplotlib.image as mpimg\n",
     "import os\n",
-    "import cv2\n",
     "from tqdm import tqdm\n",
-    "from functools import partial\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "import matplotlib.pyplot as plt\n",
     "from torchvision.transforms import v2\n",
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "05a094ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class RotateWithKeypoints:\n",
-    "    def __init__(self, degrees=(-15, 15)):\n",
-    "        self.degrees = degrees  # tuple oder einzelwert\n",
-    "\n",
-    "    def __call__(self, sample, angle_deg=None):\n",
-    "        img = sample[\"image\"]\n",
-    "        kps = sample[\"keypoints\"]\n",
-    "        _, H, W = img.shape\n",
-    "\n",
-    "        # Winkel bestimmen\n",
-    "        if angle_deg is None:\n",
-    "            if isinstance(self.degrees, (tuple, list)):\n",
-    "                angle_deg = random.uniform(*self.degrees)\n",
-    "            else:\n",
-    "                angle_deg = float(self.degrees)\n",
-    "\n",
-    "        # Bild rotieren\n",
-    "        rot = v2.RandomRotation(degrees=(angle_deg, angle_deg), expand=False)\n",
-    "        img_rot = rot(img)\n",
-    "\n",
-    "        # Keypoints transformieren\n",
-    "        center = torch.tensor([W / 2, H / 2])\n",
-    "        x = kps[:, 1] * W\n",
-    "        y = kps[:, 0] * H\n",
-    "\n",
-    "        valid = (kps != -1).all(dim=1)\n",
-    "        x_valid = x[valid]\n",
-    "        y_valid = y[valid]\n",
-    "\n",
-    "        coords = torch.stack([x_valid, y_valid], dim=1)\n",
-    "        rel_coords = coords - center\n",
-    "\n",
-    "        angle_rad = math.radians(-angle_deg)\n",
-    "        R = torch.tensor([\n",
-    "            [math.cos(angle_rad), -math.sin(angle_rad)],\n",
-    "            [math.sin(angle_rad),  math.cos(angle_rad)]\n",
-    "        ])\n",
-    "        rotated = rel_coords @ R.T + center\n",
-    "\n",
-    "        x[valid] = rotated[:, 0]\n",
-    "        y[valid] = rotated[:, 1]\n",
-    "\n",
-    "        # Zurück zu normierten Koordinaten\n",
-    "        x = x / W\n",
-    "        y = y / H\n",
-    "        kps_rot = torch.stack([y, x], dim=1)\n",
-    "\n",
-    "        sample[\"image\"] = img_rot\n",
-    "        sample[\"keypoints\"] = kps_rot\n",
-    "        sample[\"angle\"] = angle_deg  # optional für Debug\n",
-    "\n",
-    "        return sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "6bd4b086",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class FLYDataset(Dataset):\n",
-    "    def __init__(self, path_to_data, mode=\"training\", cam=0, transform=None):\n",
-    "        self.cam = cam\n",
-    "        self.H = 480\n",
-    "        self.W = 980\n",
-    "        self.transform = transform\n",
-    "\n",
-    "        self.img_paths = []\n",
-    "        self.annotations = []\n",
-    "\n",
-    "        if mode not in {\"training\", \"test\"}:\n",
-    "            raise ValueError(\"mode must be 'training' or 'test'\")\n",
-    "\n",
-    "        full_path = os.path.join(path_to_data, mode, f\"cam{cam}\")\n",
-    "        if not os.path.isdir(full_path):\n",
-    "            raise FileExistsError(f\"Wrong path {full_path}\")\n",
-    "\n",
-    "        annotation_path = os.path.join(full_path, \"annotations\", \"annotations.npz\")\n",
-    "        image_path = os.path.join(full_path, \"images\")\n",
-    "\n",
-    "        if not os.path.isfile(annotation_path):\n",
-    "            raise FileExistsError(f\"Wrong annotation path {annotation_path}\")\n",
-    "        if not os.path.isdir(image_path):\n",
-    "            raise FileExistsError(f\"Wrong image path {image_path}\")\n",
-    "\n",
-    "        self.annotations = np.load(annotation_path)[\"points2d\"]\n",
-    "\n",
-    "        for image_name in sorted(os.listdir(image_path)):\n",
-    "            if image_name.endswith(\".jpg\"):\n",
-    "                self.img_paths.append(os.path.join(image_path, image_name))\n",
-    "\n",
-    "        if len(self.img_paths) != len(self.annotations):\n",
-    "            raise IndexError(\"Number of images and annotations must be the same\")\n",
-    "\n",
-    "    def __getitem__(self, idx, transform=None):\n",
-    "        if idx >= len(self):\n",
-    "            raise LookupError(\"Invalid index\")\n",
-    "\n",
-    "        img = cv2.imread(self.img_paths[idx], cv2.IMREAD_GRAYSCALE)\n",
-    "        img_tensor = torch.tensor(img, dtype=torch.float32) / 255.\n",
-    "        img_tensor = img_tensor.unsqueeze(0)  # [1, H, W]\n",
-    "\n",
-    "        keypoints = torch.tensor(self.annotations[idx], dtype=torch.float32)  # [N, 2], (y,x) ∈ [0,1]\n",
-    "\n",
-    "        # Vor-Filter (optional)\n",
-    "        pre_mask = (\n",
-    "            (keypoints[:, 0] > 0) & (keypoints[:, 0] < 1) &\n",
-    "            (keypoints[:, 1] > 0) & (keypoints[:, 1] < 1)\n",
-    "        )\n",
-    "        keypoints[~pre_mask] = -1.0\n",
-    "\n",
-    "        sample = {\n",
-    "            \"image\": img_tensor,\n",
-    "            \"keypoints\": keypoints\n",
-    "        }\n",
-    "\n",
-    "        transform_to_use = transform or self.transform\n",
-    "        if transform_to_use:\n",
-    "            sample = transform_to_use(sample)\n",
-    "\n",
-    "        # Nach-Filter: Maskiere alles was out-of-bounds ist\n",
-    "        kps = sample[\"keypoints\"]\n",
-    "        mask = (\n",
-    "            (kps[:, 0] >= 0) & (kps[:, 0] <= 1) &\n",
-    "            (kps[:, 1] >= 0) & (kps[:, 1] <= 1)\n",
-    "        )\n",
-    "        kps[~mask] = -1.0\n",
-    "        sample[\"keypoints\"] = kps\n",
-    "\n",
-    "        return sample[\"image\"], sample[\"keypoints\"]\n",
-    "\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        # returning whole length of the dataset / number of images\n",
-    "        return len(self.img_paths)\n",
-    "    \n",
-    "    def __getvisual__(self, idx=0, transform=None):\n",
-    "        \"\"\"\n",
-    "        Gibt das Bild und die gültigen Keypoints in Pixelkoordinaten zurück.\n",
-    "        Optional: wendet eine andere Transform an als im Dataset.\n",
-    "        Kein Plot!\n",
-    "        \"\"\"\n",
-    "        # Hole das transformierte Sample (nutzt __getitem__)\n",
-    "        img, keypoints = self.__getitem__(idx, transform=transform)\n",
-    "\n",
-    "        # Nur gültige Keypoints\n",
-    "        valid = (keypoints != -1).all(dim=-1)\n",
-    "        keypoints = keypoints[valid]\n",
-    "\n",
-    "        # Normierte Koordinaten → Pixel\n",
-    "        x = keypoints[:, 1] * self.W  # x = Spalte\n",
-    "        y = keypoints[:, 0] * self.H  # y = Zeile\n",
-    "\n",
-    "        return img.squeeze().numpy(), (x.numpy(), y.numpy())"
+    "from fly_dataset import FLYDataset\n",
+    "from fly_cnn import CNN_Fly\n",
+    "from fly_rotate import FlyTransformer"
    ]
   },
   {
@@ -194,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = RotateWithKeypoints(degrees=(-20, 20))\n",
-    "dataset = FLYDataset(\"/scratch/cv-course2025/group2/data\", transform=transform)"
+    "bumblebee = FlyTransformer(degrees=(-20, 20))\n",
+    "dataset = FLYDataset(\"/scratch/cv-course2025/group2/data\", transform=bumblebee)"
    ]
   },
   {
@@ -216,8 +46,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from torchvision.transforms import v2\n",
+    "\n",
     "\n",
     "# --------- Parameter ----------\n",
     "DATA_PATH = \"/scratch/cv-course2025/group2/data\"\n",
@@ -229,7 +58,7 @@
     "dataset = FLYDataset(DATA_PATH, mode=\"training\", cam=0)\n",
     "\n",
     "# --------- Transform mit fixer Rotation vorbereiten ---------\n",
-    "rotate_transform = RotateWithKeypoints(degrees=(-30, 30))  # für Training zufällig\n",
+    "rotate_transform = FlyTransformer(degrees=(-30, 30))  # für Training zufällig\n",
     "\n",
     "# Für Visualisierung: feste Gradzahl übergeben\n",
     "def fixed_rotate(sample):\n",
@@ -256,88 +85,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8c7dd0db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CNN_Fly(nn.Module):\n",
-    "    def __init__(self, input_size, embedding_size, num_joints=38):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.embedding_size = embedding_size\n",
-    "        self.num_joints = num_joints\n",
-    "        self.input_size = input_size  # expected: int or (H, W)\n",
-    "\n",
-    "        \"\"\"Encoder\"\"\"\n",
-    "        self.e1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)\n",
-    "        self.e2 = nn.Conv2d(32, 64, kernel_size=3, stride=2, padding=1)\n",
-    "        self.e3 = nn.Conv2d(64, 64, kernel_size=3, stride=2, padding=1)\n",
-    "        self.e4 = nn.Conv2d(64, 64, kernel_size=3, padding=1)\n",
-    "        self.activation = nn.ReLU()\n",
-    "\n",
-    "        \"\"\"Bottleneck\"\"\"\n",
-    "        with torch.no_grad():\n",
-    "            dummy = torch.zeros(1, 1, *input_size) if isinstance(input_size, tuple) else torch.zeros(1, 1, input_size, input_size)\n",
-    "            dummy_out = self.encoder(dummy)\n",
-    "            self.flatten_dim = dummy_out.view(1, -1).shape[1]\n",
-    "            \n",
-    "        self.flatten = nn.Flatten()\n",
-    "        self.linear = nn.Linear(self.flatten_dim, 2 * embedding_size)\n",
-    "\n",
-    "        \"\"\"Decoder\"\"\"\n",
-    "        self.d1 = nn.Linear(embedding_size, self.flatten_dim)\n",
-    "        self.d2 = nn.ConvTranspose2d(64, 64, 3, padding=1)\n",
-    "        self.d3 = nn.ConvTranspose2d(64, 64, 2, stride=2, output_padding=0)\n",
-    "        self.d4 = nn.ConvTranspose2d(64, 32, 2, stride=2, output_padding=0)\n",
-    "        self.d5 = nn.ConvTranspose2d(32, 1, 3, padding=1)\n",
-    "        self.last_activation = nn.Sigmoid()\n",
-    "\n",
-    "        \"\"\"Keypoint regression head\"\"\"\n",
-    "        self.kp_head = nn.Sequential(\n",
-    "            nn.Linear(embedding_size, 128),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(128, num_joints * 2)\n",
-    "        )\n",
-    "\n",
-    "    def encoder(self, x):\n",
-    "        x = self.activation(self.e1(x))\n",
-    "        x = self.activation(self.e2(x))\n",
-    "        x = self.activation(self.e3(x))\n",
-    "        x = self.activation(self.e4(x))\n",
-    "        return x\n",
-    "\n",
-    "    def decode_image(self, z):\n",
-    "        x = self.d1(z)\n",
-    "        x = x.view(-1, 64, int(self.input_size[0] / 4), int(self.input_size[1] / 4))  # adjust based on encoder strides\n",
-    "        x = self.activation(self.d2(x))\n",
-    "        x = self.activation(self.d3(x))\n",
-    "        x = self.activation(self.d4(x))\n",
-    "        x = self.d5(x)\n",
-    "        return self.last_activation(x)\n",
-    "\n",
-    "\n",
-    "    def reparametrize(self, mu, logvar):\n",
-    "        std = torch.exp(0.5 * logvar)\n",
-    "        eps = torch.randn_like(std)\n",
-    "        return mu + std * eps\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        # Encode\n",
-    "        enc = self.encoder(x)\n",
-    "        flat = self.flatten(enc)\n",
-    "        z_params = self.linear(flat)\n",
-    "        mu, logvar = torch.chunk(z_params, 2, dim=1)\n",
-    "        z = self.reparametrize(mu, logvar)\n",
-    "        kp_out = self.kp_head(z)\n",
-    "        #img_out = self.decode_image(z)\n",
-    "\n",
-    "        return kp_out.view(-1, self.num_joints, 2), z, mu, logvar\n",
-    "        #return img_out, z, mu, logvar\n"
    ]
   },
   {
@@ -484,18 +231,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.23"
   }
  },
  "nbformat": 4,
